--- a/app/src/main/res/layout/activity_chi_tiet_sp.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_sp.xml
@@ -7,186 +7,169 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Activity_ChiTietSP">
 
-
+    <!-- Nút Quay Lại -->
     <ImageView
         android:id="@+id/imgBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription="Back Button" />
 
-    <ImageView
-        android:id="@+id/btnYeuThich_CTSP"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/yeuthich"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <ImageView
-        android:id="@+id/btnYeuThich_Red_CTSP"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/favorite_red"
-        android:visibility="gone"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="3dp" />
-
-
+    <!-- Tiêu Đề -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Chi tiết sản phẩm"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imgBack"
+        app:layout_constraintStart_toEndOf="@id/imgBack"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintHorizontal_bias="0.5" />
 
+    <!-- Nút Yêu Thích -->
+    <ImageView
+        android:id="@+id/btnYeuThich_CTSP"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toTopOf="@+id/imgBack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/yeuthich"
+        android:contentDescription="Favorite Button" />
+
+    <!-- Nội dung cuộn -->
     <ScrollView
         android:id="@+id/sc"
         android:layout_width="match_parent"
-        android:layout_height="720dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/imgBack"
+        app:layout_constraintBottom_toTopOf="@id/rl"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        >
+        app:layout_constraintEnd_toEndOf="parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingHorizontal="16dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp">
+
+            <!-- Hình ảnh sản phẩm -->
             <ImageView
                 android:id="@+id/img_SPCT"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/nice_shoe" />
+                android:layout_height="200dp"
+                android:layout_marginTop="16dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/nice_shoe"
+                android:contentDescription="Product Image" />
 
+            <!-- Tên sản phẩm -->
             <TextView
                 android:id="@+id/tvTen_SPCT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="16dp"
-                android:text="Ten san pham"
+                android:layout_marginTop="16dp"
+                android:text="Tên sản phẩm"
                 android:textColor="@color/black"
-                android:textSize="22dp"
-                android:textStyle="bold"
-               />
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
+            <!-- Giá sản phẩm -->
             <TextView
                 android:id="@+id/tvGia_SPCT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
                 android:text="1000$"
-                android:textColor="@color/black"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                />
+                android:textColor="#FF0000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-            <!-- Ratings -->
-
-
-            <ScrollView
+            <!-- Mô tả sản phẩm -->
+            <TextView
+                android:id="@+id/tvMoTa_SPCT"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/tvMoTa_SPCT"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginLeft="16dp"
-                    android:text=" lông trắng đen già khụ, thấy cả chúng tôi ngày đó, trong những ngày vất vả nhưng yên bình. Tôi nghĩ, có lẽ đó là những ngày hạnh phúc và vui vẻ nhất tôi từng có. Sau này, khi bước đi trên đường đời chông gai, có thể sẽ chẳng còn ai chỉ bảo, dạy dỗ tôi tận tình như thầy đã từng, có thể sẽ chẳng có ai lo tôi liệu có ngủ đủ giấc, liệu có stress khi nhồi nhét quá nhiều. Nhưng, cố nhân từng nói, cuộc đời chỉ cần một người khiến ta ngưỡng mộ, để cả đời noi gương, cả đời thương mến. Vậy là quá đủ rồi”."
-                    android:textColor="@color/black" />
-            </ScrollView>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Mô tả sản phẩm chi tiết..."
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
+            <!-- Đánh giá sản phẩm -->
             <TextView
                 android:id="@+id/tvDanhGia_SPCT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:text="Đánh giá sản phẩm:"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
 
+            <!-- RecyclerView -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvDanhGia_SPCT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                />
+                android:layout_marginTop="8dp" />
         </LinearLayout>
     </ScrollView>
-
-    <!-- User Reviews -->
-
-
 
     <RelativeLayout
         android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Nút Chat -->
         <ImageView
             android:id="@+id/btnBoxChat_CTSP"
-            android:layout_width="50dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="16dp"
+            android:layout_centerVertical="true"
             app:srcCompat="@drawable/boxchat"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            />
+            android:contentDescription="Chat Button" />
 
+        <!-- Nút Giỏ Hàng -->
         <ImageView
             android:id="@+id/btnGioHang_CTSP"
-            android:layout_width="50dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="90dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/giohang"
-            />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_toEndOf="@id/btnBoxChat_CTSP"
+            android:layout_marginStart="32dp"
+            android:layout_centerVertical="true"
+            app:srcCompat="@drawable/giohang"
+            android:contentDescription="Cart Button" />
 
+        <!-- Nút Mua Ngay -->
         <Button
             android:id="@+id/btnMuaHang_CTSP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="24dp"
-            android:layout_marginTop="10dp"
-            android:text="Mua sản phẩm ngay"
-            android:textSize="16dp"
-            android:textStyle="bold"
             android:layout_alignParentEnd="true"
-            />
+            android:layout_marginEnd="16dp"
+            android:layout_centerVertical="true"
+            android:text="Mua ngay"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:backgroundTint="@color/blue"
+            android:textColor="@color/white" />
     </RelativeLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
