--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,9 +93,11 @@
             <!-- Slideshow Section -->
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="230dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp">
+                android:layout_height="180dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/rounded_corners"
+                android:clipToOutline="true">
 
                 <!-- Slideshow Image -->
                 <ImageView
@@ -174,3 +176,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
