--- a/doan/src/Auth/Login/index.scss
+++ b/doan/src/Auth/Login/index.scss
@@ -1,13 +1,21 @@
 .container_login {
+  height: 100vh;
   text-align: center;
   font-family: Arial, sans-serif;
 
   .img_background {
     position: relative;
+    width: 100%;
+    height: 100%;
 
     img {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: cover; /* Đảm bảo ảnh phủ toàn bộ màn hình mà không bị méo */
+      z-index: -1; /* Đưa ảnh nền ra sau */
     }
 
     .btn_login {
