--- a/app/src/main/res/layout/dialog_diachi.xml
+++ b/app/src/main/res/layout/dialog_diachi.xml
@@ -18,6 +18,16 @@
         android:layout_gravity="center"
         />
 
+    <Button
+        android:id="@+id/btnLayViTri"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Lấy địa chỉ từ vị tí của bạn"
+        android:textStyle="bold"
+        android:textSize="18dp"
+        android:layout_margin="10dp"
+        />
+
 
     <RelativeLayout
         android:layout_marginHorizontal="12dp"
