--- a/app/src/main/res/layout/item_orderdetail_hoanthanh.xml
+++ b/app/src/main/res/layout/item_orderdetail_hoanthanh.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="10dp"
+    >
 
     <LinearLayout
         android:id="@+id/layoutChooseLocation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:background="@drawable/bg_dialog"
-        android:orientation="horizontal"
-        android:padding="5dp"
-        >
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/img_Order_Dt"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
             />
+
+
 
         <LinearLayout
             android:layout_width="259dp"
@@ -87,23 +89,23 @@
                 android:text="$ 100"
                 android:textColor="#ff00"
                 android:textSize="20dp" />
-<!--            <TextView-->
-<!--                android:id="@+id/tv_km_dt"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Giảm giá : ..."-->
-<!--                android:textStyle="bold"-->
-<!--                android:layout_marginLeft="50dp"-->
-<!--                android:textColor="#ff00"-->
-<!--                android:textSize="20dp"/>-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/tv_km_dt"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="Giảm giá : ..."-->
+            <!--                android:textStyle="bold"-->
+            <!--                android:layout_marginLeft="50dp"-->
+            <!--                android:textColor="#ff00"-->
+            <!--                android:textSize="20dp"/>-->
         </LinearLayout>
+
     </LinearLayout>
 
-
     <EditText
-        android:id="@+id/edDanhGia"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Đánh giá"
         />
+
 </LinearLayout>
