hieu add reviewSP voi Voucher

--- a/app/src/main/res/layout/item_danhgia.xml
+++ b/app/src/main/res/layout/item_danhgia.xml
@@ -14,8 +14,19 @@
         android:layout_width="60dp"
         android:layout_height="80dp"
         android:src="@drawable/ic_launcher_background"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/NgayThang"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/username"
+        android:text="Username"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="2dp"
         />
 
     <TextView
