--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -120,7 +120,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/txt5"
                     style="@style/textStyle"
-                    android:text="Tax"
+                    android:text="Voucher"
                     app:layout_constraintStart_toStartOf="@+id/txt3"
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@id/txt3"/>
@@ -131,7 +131,7 @@
                     app:layout_constraintEnd_toEndOf="@id/txtDelivery"
                     app:layout_constraintTop_toTopOf="@id/txt5"
                     style="@style/textStyle"
-                    android:text="100 VND"/>
+                    android:text="0"/>
                 <View
                     android:layout_width="wrap_content"
                     android:layout_height="1dp"
@@ -177,6 +177,8 @@
                     app:layout_constraintTop_toTopOf="@+id/txt7"
                     app:layout_constraintStart_toStartOf="@+id/View"
                     android:layout_marginTop="40dp"
+                    android:focusable="false"
+                    android:clickable="true"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
