--- a/app/src/main/res/layout/activity_ctsp_to_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_ctsp_to_thanh_toan.xml
@@ -43,6 +43,7 @@
                     android:layout_height="100dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
+                    android:scaleType="centerCrop"
                     app:srcCompat="@drawable/nice_shoe" />
 
                 <LinearLayout
@@ -242,6 +243,17 @@
                     android:layout_marginTop="40dp"
                     android:focusable="false"
                     android:clickable="true"
+                    />
+
+                <Button
+                    android:id="@+id/btnXoaVoucher"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/edtVoicher"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:background="@drawable/xvoucher"
+                    android:visibility="gone"
                     />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
