--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -181,6 +181,17 @@
                     android:clickable="true"
                     />
 
+                <Button
+                    android:id="@+id/btnXoaVoucher"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/edtVoicher"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:background="@drawable/xvoucher"
+                    android:visibility="gone"
+                    />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <!--            <TextView-->
