--- a/app/src/main/res/layout/item_diachi.xml
+++ b/app/src/main/res/layout/item_diachi.xml
@@ -2,8 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     android:id="@+id/cv_itemLocation"
+    app:cardCornerRadius="16dp"
     android:padding="12dp">
     <LinearLayout
         android:layout_width="match_parent"
