--- a/app/src/main/res/layout/activity_capnhathoten.xml
+++ b/app/src/main/res/layout/activity_capnhathoten.xml
@@ -6,7 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.CapnhathotenActivity">
-
+    <ImageButton
+        android:id="@+id/buttonBack_hoten"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="8dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="Back"
+        android:src="@drawable/ic_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <!-- Tiêu đề -->
     <TextView
         android:id="@+id/tvTitle"
