--- a/app/src/main/res/layout/activity_manhinhnhanguima.xml
+++ b/app/src/main/res/layout/activity_manhinhnhanguima.xml
@@ -23,7 +23,7 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Xac thưc email "
+        android:text="Xác thực email "
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -44,17 +44,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
-        android:layout_marginHorizontal="16dp">
+        android:layout_marginHorizontal="16dp"
+        android:gravity="center_vertical"> <!-- Thêm thuộc tính gravity -->
 
         <!-- Biểu tượng email -->
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@android:drawable/ic_menu_send"
-            android:contentDescription="Email Icon"
-            android:layout_gravity="center_vertical"/>
+            android:contentDescription="Email Icon"/>
 
-        <!-- Trường hien email -->
+        <!-- Trường hiện email -->
         <TextView
             android:id="@+id/tvEmaill"
             android:layout_width="0dp"
@@ -83,14 +83,14 @@
         android:textColor="@android:color/white"/>
 
     <!-- Checkbox thông báo -->
-    <CheckBox
-        android:id="@+id/cbNotifications"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gửi tôi thông tin xu hướng, chương trình khuyến mãi và cập nhật mới nhất."
-        android:textSize="14sp"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/btnNext"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="16dp"/>
+<!--    <CheckBox-->
+<!--        android:id="@+id/cbNotifications"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Gửi tôi thông tin xu hướng, chương trình khuyến mãi và cập nhật mới nhất."-->
+<!--        android:textSize="14sp"-->
+<!--        android:textColor="@android:color/black"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/btnNext"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        android:layout_marginTop="16dp"/>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
