--- a/app/src/main/res/layout/activity_manhinhguimathaydoimatkhau.xml
+++ b/app/src/main/res/layout/activity_manhinhguimathaydoimatkhau.xml
@@ -83,14 +83,14 @@
         android:textColor="@android:color/white"/>
 
     <!-- Checkbox thông báo -->
-    <CheckBox
-        android:id="@+id/cbNotifications"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gửi tôi thông tin xu hướng, chương trình khuyến mãi và cập nhật mới nhất."
-        android:textSize="14sp"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/btnNext"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="16dp"/>
+<!--    <CheckBox-->
+<!--        android:id="@+id/cbNotifications"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Gửi tôi thông tin xu hướng, chương trình khuyến mãi và cập nhật mới nhất."-->
+<!--        android:textSize="14sp"-->
+<!--        android:textColor="@android:color/black"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/btnNext"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        android:layout_marginTop="16dp"/>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
