--- a/app/src/main/res/layout/item_diachi.xml
+++ b/app/src/main/res/layout/item_diachi.xml
@@ -6,6 +6,7 @@
     android:layout_margin="5dp"
     android:id="@+id/cv_itemLocation"
     app:cardCornerRadius="16dp"
+    app:cardElevation="8dp"
     android:padding="12dp">
     <LinearLayout
         android:layout_width="match_parent"
