--- a/app/src/main/res/layout/activity_voucher.xml
+++ b/app/src/main/res/layout/activity_voucher.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:paddingTop="20dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_back"
-            android:background="@color/white"
+            android:background="?attr/selectableItemBackground"
             android:layout_marginTop="10dp"/>
 
         <TextView
