--- a/app/src/main/res/layout/activity_voucher.xml
+++ b/app/src/main/res/layout/activity_voucher.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:paddingTop="20dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
@@ -28,10 +29,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
+            android:layout_marginLeft="115dp"
             android:text="Voucher"
             android:textColor="@color/black"
-            android:textSize="30dp"
+            android:textSize="25dp"
             android:textStyle="bold" />
 
     </LinearLayout>
